appdemo/k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: golgana-dev # o dev, elegí uno y mantenelo igual en todos los yaml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: golgana-backend:v1 # << ACA USAS LA IMAGEN QUE YA CREASTE
        imagePullPolicy: IfNotPresent # para que si la cargás a mano en Minikube no intente bajarla de Docker Hub
        ports:
        - containerPort: 5000
