appdemo/k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: golgana-dev # o dev
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5000
